--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.25.0"
   },
   "devDependencies": {
