--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "lucide-react": "^0.441.0",
     "powerbi-client": "^2.23.1",
     "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
